--- a/gdk/Makefile.am
+++ b/gdk/Makefile.am
@@ -147,8 +147,8 @@ libgdk_linux_fb_2_0_la_LDFLAGS = $(LDADD)
 libgdk_win32_2_0_la_SOURCES = $(common_sources) gdkkeynames.c
 libgdk_win32_2_0_la_LIBADD = win32/libgdk-win32.la $(GDK_DEP_LIBS) \
   $(top_builddir)/gdk-pixbuf/libgdk_pixbuf-$(GTK_API_VERSION).la
-libgdk_win32_2_0_la_DEPENDENCIES = win32/libgdk-win32.la gdk.def
-libgdk_win32_2_0_la_LDFLAGS = -export-symbols gdk.def $(LDADD)
+libgdk_win32_2_0_la_DEPENDENCIES = win32/libgdk-win32.la win32/rc/gdk-win32-res.o gdk.def
+libgdk_win32_2_0_la_LDFLAGS = -Wl,win32/rc/gdk-win32-res.o -export-symbols gdk.def $(LDADD)
 if HAVE_WINTAB
 libgdk_win32_2_0_la_LIBADD += -Lwin32 -lwntab32x
 endif
