Accept dashes in demo titles.
2005-07-12  Matthias Clasen  <mclasen@redhat.com>

	* demos/gtk-demo/geninclude.pl.in: Accept dashes in demo titles.

--- a/demos/gtk-demo/geninclude.pl.in
+++ b/demos/gtk-demo/geninclude.pl.in
@@ -35,7 +35,7 @@ for $file (@ARGV) {
 
 # generate a list of 'parent names'
 foreach $href (@demos) {
-    if ($href->{"title"} =~ m|^([\w\s]+)/[\w\s]+$|) {
+    if ($href->{"title"} =~ m|^([-\w\s]+)/[-\w\s]+$|) {
 	my $parent_name = $1;
 	my $do_next = 0;
 
@@ -77,7 +77,7 @@ if (defined @parents) {
 		next;
 	    }
 	    
-	    if ($demos[$j]{"title"} =~ m|^$parents[$i]/([\w\s]+)$|) {
+	    if ($demos[$j]{"title"} =~ m|^$parents[$i]/([-\w\s]+)$|) {
 		if ($first) {
 		    $first = 0;
 		} else {
