Rename this demo.
2005-07-12  Matthias Clasen  <mclasen@redhat.com>

	* demos/gtk-demo/iconview.c: Rename this demo.

	* demos/gtk-demo/iconview_edit.c: Add a demo for icon view
	editing and drag-and-drop.

--- a/demos/gtk-demo/Makefile.am
+++ b/demos/gtk-demo/Makefile.am
@@ -18,6 +18,7 @@ demos =						\
 	expander.c  				\
 	hypertext.c				\
 	iconview.c				\
+	iconview_edit.c				\
 	images.c				\
 	list_store.c				\
 	menus.c					\
