Don't need -luuid on Win32. It was some leftover, and in fact occasionally
2005-07-14  Tor Lillqvist  <tml@novell.com>

	* configure.in (GDK_EXTRA_LIBS): Don't need -luuid on Win32. It
	was some leftover, and in fact occasionally caused issues with
	libtool as it made its way into the libgdk-win32-2.0.la file and
	that way into the .la files of all libraries that depend on
	GDK. (This happened only when building from CVS and not using a
	full "make install" which would run the sanitize-la.sh script.)

--- a/configure.in
+++ b/configure.in
@@ -1366,7 +1366,7 @@ if test "x$gdktarget" = "xwin32"; then
     AC_SUBST(GDK_WIN32_EXTRA_CFLAGS)
   fi
 
-  GDK_EXTRA_LIBS="$GDK_EXTRA_LIBS -lgdi32 -user32 -limm32 -lshell32 -lole32 -luuid"
+  GDK_EXTRA_LIBS="$GDK_EXTRA_LIBS -lgdi32 -user32 -limm32 -lshell32 -lole32"
   AM_CONDITIONAL(USE_WIN32, true)
 else
   AM_CONDITIONAL(USE_WIN32, false)
