Include gtkwin32embed.h in EXTRA_DIST unconditionally. Fixes #311972.
2005-07-29  J. Ali Harlow  <ali@juiblex.co.uk>

        * gtk/Makefile.am: Include gtkwin32embed.h in EXTRA_DIST
	unconditionally. Fixes #311972.

--- a/gtk/Makefile.am
+++ b/gtk/Makefile.am
@@ -749,6 +749,7 @@ EXTRA_DIST +=                   \
 	gtk.def			\
 	gtk-win32.rc		\
 	gtk-win32.rc.in		\
+	gtkwin32embed.h		\
 	gtkfilesystemwin32.h	\
 	gtkfilesystemwin32.c	\
 	gtkrc.default		\
