--- a/gtk-zip.sh.in
+++ b/gtk-zip.sh.in
@@ -20,11 +20,12 @@ $DLLDIR/libgdk-win32-@GTK_API_VERSION@-@LT_CURRENT_MINUS_AGE@.dll
 $DLLDIR/libgtk-win32-@GTK_API_VERSION@-@LT_CURRENT_MINUS_AGE@.dll
 EOF
 
-zip $ZIP lib/gtk-2.0/@GTK_BINARY_VERSION@/loaders/*.dll lib/gtk-2.0/@GTK_BINARY_VERSION@/immodules/*.dll
+zip $ZIP lib/gtk-2.0/@GTK_BINARY_VERSION@/loaders/*.dll lib/gtk-2.0/@GTK_BINARY_VERSION@/immodules/*.dll lib/gtk-2.0/@GTK_BINARY_VERSION@/engines/*.dll
 
-zip $ZIP share/themes/Default/gtk-2.0/gtkrc
+zip $ZIP share/themes/Raleigh/gtk-2.0/gtkrc
 zip $ZIP share/themes/Default/gtk-2.0-key/gtkrc
 zip $ZIP share/themes/Emacs/gtk-2.0-key/gtkrc
+zip $ZIP share/themes/MS-Windows/gtk-2.0/gtkrc
 
 zip -r $ZIP lib/locale/*/LC_MESSAGES/gtk20.mo
 
