Revert to linking against pangowin32 under win32 platform (Owen Taylor).
2005-08-10  J. Ali Harlow  <ali@juiblex.co.uk>

        * configure.in: Revert to linking against pangowin32 under win32
	platform (Owen Taylor).

--- a/configure.in
+++ b/configure.in
@@ -1344,7 +1344,11 @@ fi
 
 # Check for Pango flags
 
-PANGO_PACKAGES="pango pangocairo"
+if test "x$gdktarget" = "xwin32"; then
+	PANGO_PACKAGES="pangowin32 pangocairo"
+else
+	PANGO_PACKAGES="pango pangocairo"
+fi
 
 AC_MSG_CHECKING(Pango flags)
 if $PKG_CONFIG --exists $PANGO_PACKAGES ; then
