--- a/docs/tools/Makefile.am
+++ b/docs/tools/Makefile.am
@@ -14,7 +14,8 @@ DEPS = 									\
 LDADDS = 								\
 	$(top_builddir)/gdk-pixbuf/libgdk_pixbuf-$(GTK_API_VERSION).la	\
 	$(top_builddir)/gdk/$(gdktargetlib)        			\
-	$(top_builddir)/gtk/$(gtktargetlib)
+	$(top_builddir)/gtk/$(gtktargetlib)				\
+	$(GTK_DEP_LIBS)
 
 if OS_UNIX
 noinst_PROGRAMS = 		\
