Add new translations

--- a/po-properties/POTFILES.in
+++ b/po-properties/POTFILES.in
@@ -23,6 +23,7 @@ gdk-pixbuf/io-xpm.c
 gdk/gdk.c
 gdk/gdkdisplaymanager.c
 gdk/gdkpango.c
+gdk/gdkscreen.c
 gdk/win32/gdkmain-win32.c
 gdk/x11/gdkmain-x11.c
 gtk/gtkaboutdialog.c
