--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -23,6 +23,7 @@ gdk-pixbuf/io-xpm.c
 gdk/gdk.c
 gdk/gdkdisplaymanager.c
 gdk/gdkpango.c
+gdk/gdkscreen.c
 gdk/keyname-table.h
 gdk/win32/gdkmain-win32.c
 gdk/x11/gdkmain-x11.c
