Add a cross-platform "tray icon" API, by porting EggStatusIcon/EggTrayIcon
2005-08-29  Matthias Clasen  <mclasen@redhat.com>

	Add a cross-platform "tray icon" API, by
	porting EggStatusIcon/EggTrayIcon (#105101)

	* gtk/gtkstatusicon.h: A GtkStatusIcon is an object which
	displays an icon in a notification area.

	* gtk/gtkstatusicon-x11.c: GtkStatusIcon implementation for
	X11, using GtkTrayIcon.

	* gtk/gtktrayicon.h:
	* gtk/gtktrayicon.c: An implementation of the freedesktop.org
	system tray specification, not public API.

	* gtk/gtk.symbols: Add new exported functions.

	* gtk/gtk.h: Include gtkstatusicon.h.

	* gtk/Makefile.am: Add new files.

	* tests/Makefile.am:
	* tests/teststatusicon.c: Test for GtkStatusIcon.

--- a/gtk/Makefile.am
+++ b/gtk/Makefile.am
@@ -239,6 +239,7 @@ gtk_public_h_sources =          \
 	gtksocket.h		\
 	gtkspinbutton.h		\
 	gtkstatusbar.h		\
+	gtkstatusicon.h		\
 	gtkstock.h		\
 	gtkstyle.h		\
 	gtktable.h		\
@@ -535,8 +536,13 @@ gtk_c_sources +=         gtkfilesystemwin32.c
 endif
 
 if USE_X11
-gtk_private_h_sources += gtkxembed.h
-gtk_c_sources +=         gtkplug-x11.c gtksocket-x11.c gtkxembed.c
+gtk_private_h_sources += gtkxembed.h gtktrayicon.h
+gtk_c_sources += \
+	gtkplug-x11.c   \
+	gtksocket-x11.c \
+	gtkxembed.c     \
+	gtktrayicon.c   \
+	gtkstatusicon-x11.c
 else
 if USE_WIN32
 gtk_private_h_sources += gtkwin32embed.h
